# analytics

./: .gitignore  .npmignore  README.md  declaration.d.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.ts
output/: index.html  index.js
src/: app.ts  constants.ts  errors.ts  index.ts
src/checkers/: KeepAliveSupport.checker.ts
src/controllers/: Analytics.conroller.ts  Analytics.controller.ts  Batch.controller.ts  Interface.controller.ts  Network.controller.ts  Session.controller.ts
src/declarations/: invoice-payload.interface.ts
src/interfaces/: event-attributes.interface.ts
src/observers/: CustomEvent.observer.ts  Document.observer.ts  Stars.observer.ts  TonConnect.observer.ts  WebApp.observer.ts  WebView.observer.ts
src/observers/tapps/: Tapps.observer.ts  tapps.d.ts
src/repositories/: BatchStorage.ts
src/services/: Batch.service.ts  HumanProof.service.ts
src/types/: index.d.ts
src/utils/: compress.ts  generateUUID.ts  sha256.ts
src/validators/: invoice-payload.validator.ts
src/wasm/: initWasmModule.js
src/wasm/human-proof/: Cargo.toml
src/wasm/human-proof/src/: lib.rs
src/workers/: HumanProof.worker.js  HumanProof.worker.ts
tests/: index.html
