[package]
name = "human-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.4"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"